# didi-bot

./: .coverage  .dockerignore  .env  .env.example  ACCEPTANCE.md  ALIGNMENT.md  CONFIG_FIX_GUIDE.md  DESIGN.md  DOCKER_DEPLOY.md  DOCKER_SUMMARY.md  Dockerfile  LightsailDefaultKey-ap-southeast-1 (3).pem  README.md  TASK.md  TROUBLESHOOTING.md  VPS_DEPLOYMENT_GUIDE.md  check_config.py  deploy.sh  deploy_docker.sh  deploy_git.sh  deploy_rsync.sh  didi.pem  docker-compose.monitoring.yaml  docker-compose.prod.yaml  docker-compose.yaml  fix_config.sh  healthcheck.py  monitor.py  orderbot.db  test_commands.md  webhook_deploy.py
.github/workflows/: deploy.yml
data/: orderbot.db
monitoring/: prometheus.yml
orderbot/: __init__.py  __main__.py  pyproject.toml
orderbot/src/: app.py  config.py
orderbot/src/core/: db.py  models.py  repo.py
orderbot/src/services/: channel_publisher.py  order_service.py  user_management.py
orderbot/src/tests/: __init__.py  test_bot_callbacks.py  test_bot_commands.py  test_bot_user_management.py  test_channel_publisher_retry.py  test_config_and_keyboard_fallback.py  test_keyboards_and_channel.py  test_middlewares.py  test_middlewares_positive.py  test_repo_and_service.py  test_state_machine.py  test_user_management.py
orderbot/src/tg/: bot.py  fsm.py  keyboards.py  middlewares.py
orderbot/src/utils/: logging.py  network.py  process_monitor.py
orderbot/telegram_orderbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
