[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-orderbot"
version = "0.1.0"
description = "Telegram 工单管理 Bot (MVP) — aiogram + SQLite + SQLAlchemy (async)"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1",
  "SQLAlchemy[asyncio]>=2.0.29",
  "aiosqlite>=0.19.0",
  "pydantic>=2.6.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.2",
  "coverage>=7.4.0"
]

[tool.setuptools.packages.find]
include = ["orderbot*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["orderbot"]

[tool.coverage.report]
omit = ["*/__init__.py", "*/tests/*"]
show_missing = true